test/legs/2/empty-charset.err
empty-charset.legs:2:9-10: parse error: 'charset' prefix rule expects charset_expr; received brack_c.
| empty: []
          ~

